// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channel reducer handles actions - setChannelId 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": "this-is-a-test-id",
  "message": "",
  "shareableUri": "",
  "loader": Immutable.Record {
    "loading": true,
    "message": "",
  },
  "members": null,
}
`;

exports[`channel reducer handles actions - setLoading 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": null,
  "message": "",
  "shareableUri": "",
  "loader": Immutable.Record {
    "loading": false,
    "message": "",
  },
  "members": null,
}
`;

exports[`channel reducer handles actions - setLoadingMessage 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": null,
  "message": "",
  "shareableUri": "",
  "loader": Immutable.Record {
    "loading": true,
    "message": "this is a loading message",
  },
  "members": null,
}
`;

exports[`channel reducer handles actions - setShareableUri 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": null,
  "message": "",
  "shareableUri": "zbay.io/channel/this-is-a-hash",
  "loader": Immutable.Record {
    "loading": true,
    "message": "",
  },
  "members": null,
}
`;

exports[`channel reducer handles epics - loadChannel fetches messages 1`] = `Immutable.List []`;

exports[`channel reducer handles epics - loadChannel sets uri 1`] = `"zbay.io/channel/eJxNizEOgCAMAL9iGkcdWF19CUqjDVKMRY0S/i4YB6dL7nIRWDuEDvpZM+NSKWhAG7OhSLa3qIASPlGXaFDGjdZAnn+bHvwe3tnilc8IdNjciUfviKf2IDwLc24VpPQAl0oo4g=="`;

exports[`channel reducer handles epics - resendMessage resend selected message 1`] = `
Immutable.Map {
  "new-op-id": Immutable.Operation {
    "opId": "new-op-id",
    "type": "pendingMessage",
    "meta": Immutable.Record {
      "message": Immutable.Map {
        "id": "message-op-id",
        "type": 1,
        "createdAt": 1551963828,
        "message": "This is some message test-1",
        "signature": Object {
          "data": Array [
            12,
            148,
            160,
            236,
            37,
            15,
            86,
            196,
            169,
            151,
            131,
            122,
            221,
            208,
            135,
            90,
            250,
            118,
            247,
            134,
            159,
            99,
            233,
            247,
            189,
            62,
            178,
            127,
            190,
            155,
            255,
            90,
            126,
            78,
            139,
            0,
            81,
            33,
            225,
            39,
            63,
            145,
            193,
            48,
            223,
            99,
            182,
            89,
            203,
            71,
            130,
            225,
            42,
            15,
            98,
            9,
            108,
            60,
            76,
            153,
            19,
            195,
            209,
            186,
          ],
          "type": "Buffer",
        },
      },
      "channelId": "",
    },
    "txId": null,
    "error": null,
    "status": "pending",
  },
}
`;

exports[`channel reducer handles epics - sendOnEnter sends message 1`] = `
Object {
  "createdAt": 1551963828,
  "message": "this is some message",
  "signature": Object {
    "data": Array [
      93,
      85,
      97,
      98,
      81,
      1,
      181,
      115,
      32,
      199,
      234,
      201,
      0,
      241,
      204,
      35,
      64,
      224,
      126,
      70,
      101,
      55,
      234,
      147,
      112,
      148,
      74,
      153,
      86,
      57,
      52,
      142,
      88,
      47,
      206,
      222,
      169,
      42,
      105,
      70,
      2,
      3,
      105,
      72,
      56,
      219,
      14,
      60,
      18,
      200,
      57,
      118,
      188,
      29,
      134,
      99,
      133,
      197,
      172,
      242,
      125,
      123,
      155,
      238,
    ],
    "type": "Buffer",
  },
  "spent": undefined,
  "type": 1,
}
`;

exports[`channel reducer handles epics -clearNewMessages clears new messages for current channel 1`] = `undefined`;
